# eit-lab

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  FreeRTOSHooks.c  cdc_handling.c  channel_controller.c  display_handling.cpp  filters.c  main.c  mic_channel.c  poll_blink_handling.c  program_state.c  report_handling.c  sdkRTOSfix.c  spk_channel.c  task_tracing.c  uac2_handling.c  usb_descriptors.c  usb_handling.c
src/include/: FreeRTOSConfig.h  cdc_handling.h  channel_controller.h  display_handling.h  filters.h  mic_channel.h  poll_blink_handling.h  program_config.h  program_state.h  report_handling.h  spk_channel.h  task_tracing.h  tusb_config.h  uac2_handling.h  usb_descriptors.h  usb_handling.h
